# PeriMail

./: .dockerignore  .env.example  .gitignore  Dockerfile  Procfile  entrypoint.sh  main.py  pyproject.toml  railway.toml
bot/: bot.py  oauth_server.py
bot/commands/: accounts.py  calendar.py  categories.py  run.py
docs/superpowers/plans/: 2026-05-19-perimail-implementation.md
docs/superpowers/specs/: 2026-05-19-gmail-organizer-design.md
perimail/: auth.py  calendar.py  classifier.py  crypto.py  db.py  fetcher.py  labeler.py  report.py  runner.py
tests/: test_calendar.py  test_calendar_commands.py  test_classifier.py  test_crypto.py  test_db.py  test_main.py  test_report.py  test_runner.py
